--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* Tag selector to select the 'body' element */
 body {
   /* Your code here! */
+  font-family: Helevetica Neue
 }
 
 /* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
@@ -12,6 +13,7 @@ div {
 #main-header {
   /* Your code here! */
   color:red;
+  font-size: 22px
 }
 
 /* Class selector to select elements containing the class 'perspective-questions' */
