--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body {
   /* Your code here! */
   font-family: Helevetica Neue;
+  padding: 30px;
 }
 
 /* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
